Add several commands + CLI.

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,7 +32,7 @@ dev =
 
 [options.entry_points]
 console_scripts =
-    heos = heos.cli:main
+    heos = heos.cli.main:cli
 
 [bdist_wheel]
 universal = 1
