--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ home-page = https://github.com/jrderuiter/heos
 description = Python Heos client.
 license = unlicensed
 long-description = file: README.md
+version = 0.0.1
 
 [options]
 zip_safe = false
@@ -16,6 +17,7 @@ setup_requires =
     setuptools >= 38.3.0
 install_requires =
     click
+    PyYAML
 package_dir=
     =src
 packages=find:
